# RayTracing

./: .gitignore  CMakeLists.txt  README.md  release.sh  run.sh
include/: Camera.hpp  Color.hpp  Hittable.hpp  HittableList.hpp  Interval.hpp  Material.hpp  Ray.hpp  Scenes.hpp  Sphere.hpp  Utils.hpp  Vector.hpp
src/: Camera.cpp  Interval.cpp  Material.cpp  Scenes.cpp  main.cpp
